change background color

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.3",
     "@astrojs/check": "^0.7.0",
-    "typescript": "^5.5.2"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.3",
+    "tailwindcss": "^3.4.4"
+  },
+  "devDependencies": {
+    "sass": "^1.77.8",
+    "typescript": "^5.5.3"
   }
 }
