--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.3",
+    "decap-cms-app": "^3.3.3",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
