--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,3 +8,8 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Publish Date", name: "publishDate", widget: "datetime" }   
       - { label: "Body", name: "body", widget: "markdown" }
+media_folder: "src/assets/images" # Location where files will be stored in the repo
+public_folder: "src/assets/images" # The src attribute for uploaded media
+backend:
+  name: git-gateway
+  branch: main # Branch to update (optional; defaults to master)
